--- a/manifest.json
+++ b/manifest.json
@@ -6,16 +6,22 @@
   "description": "Reference app for VTEX IO Services",
   "mustUpdateAt": "2018-01-04",
   "categories": [],
-  "dependencies": {},
+  "dependencies": {
+    "vtex.vtex-logger-react": "1.x"
+  },
   "builders": {
     "node": "7.x",
-    "docs": "0.x"
+    "docs": "0.x",
+    "messages": "0.x"
   },
   "scripts": {
     "prereleasy": "bash lint.sh"
   },
   "credentialType": "absolute",
   "policies": [
+    {
+      "name": "read-write-apps-settings"
+    },
     {
       "name": "outbound-access",
       "attrs": {
@@ -28,7 +34,25 @@
     },
     {
       "name": "colossus-write-logs"
+    },
+    {
+      "name": "outbound-access",
+      "attrs": {
+        "host": "dynamic-pricing-api-94ae60254122.herokuapp.com",
+        "path": "/api/*"
+      }
     }
   ],
+  "billingOptions": {
+    "termsURL": "https://compliance.vtex.com/gdpr/policies/vtex-privacy-policy",
+    "support": {
+      "url": "https://support.vtex.com/hc/requests"
+    },
+    "free": true,
+    "type": "free",
+    "availableCountries": [
+      "*"
+    ]
+  },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
