updated the vendor

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "service-example",
-  "vendor": "kitco",
+  "vendor": "demoaccount35",
   "version": "0.3.0",
   "title": "Service Example",
   "description": "Reference app for VTEX IO Services",
